fix contrast theme

--- a/scss/widgets/generic/gridBase/_colors.scss
+++ b/scss/widgets/generic/gridBase/_colors.scss
@@ -98,8 +98,9 @@ $datagrid-menu-icon-color: null !default;
 * $type color
 */
 $datagrid-cell-modified-border-color: null !default;
-$datagrid-cell-removed-border-color: $datagrid-border-color !default;
-$datagrid-row-removed-bg: $datagrid-border-color !default;
+$datagrid-cell-removed-border-color: null !default;
+$datagrid-row-removed-bg: null !default;
+$datagrid-cell-removed-text-color: null !default;
 
 /**
 * $name 45. Invalidate data faded color
@@ -245,6 +246,9 @@ $datagrid-icon-link-disabled-opacity: $button-disabled-icon-opacity;
   $datagrid-columnchooser-overlay-border-radius: $base-border-radius-large !default; // TODO: may be not need
   $datagrid-column-separator-bg: color.change($base-accent, $alpha: 0.5) !default;
   $datagrid-text-stub-background-image-path: data-uri('images/widgets/generic/color-schemes/carmine/grid/text-stub.png') !default;
+  $datagrid-cell-removed-border-color: $datagrid-border-color !default;
+  $datagrid-row-removed-bg: $datagrid-border-color !default;
+  $datagrid-cell-removed-text-color: $datagrid-columnchooser-item-color !default;
 }
 
 @if $color == "contrast" {
@@ -285,6 +289,9 @@ $datagrid-icon-link-disabled-opacity: $button-disabled-icon-opacity;
   $datagrid-columnchooser-overlay-border-radius: $base-border-radius + 2px !default;
   $datagrid-column-separator-bg: darken($datagrid-base-background-color, 13.5%) !default;
   $datagrid-text-stub-background-image-path: data-uri('images/widgets/generic/color-schemes/contrast/grid/text-stub.png') !default;
+  $datagrid-cell-removed-border-color: $base-accent !default;
+  $datagrid-row-removed-bg: $base-accent !default;
+  $datagrid-cell-removed-text-color: $datagrid-columnchooser-item-color !default;
 }
 
 @if $color == "dark" {
@@ -325,6 +332,9 @@ $datagrid-icon-link-disabled-opacity: $button-disabled-icon-opacity;
   $datagrid-columnchooser-overlay-border-radius: $base-border-radius-large !default; // TODO: may be not need
   $datagrid-column-separator-bg: color.change($base-accent, $alpha: 0.5) !default;
   $datagrid-text-stub-background-image-path: data-uri('images/widgets/generic/color-schemes/dark/grid/text-stub.png') !default;
+  $datagrid-cell-removed-border-color: $datagrid-border-color !default;
+  $datagrid-row-removed-bg: $datagrid-border-color !default;
+  $datagrid-cell-removed-text-color: $datagrid-columnchooser-item-color !default;
 }
 
 @if $color == "darkmoon" {
@@ -365,6 +375,9 @@ $datagrid-icon-link-disabled-opacity: $button-disabled-icon-opacity;
   $datagrid-columnchooser-overlay-border-radius: $base-border-radius-large !default;
   $datagrid-column-separator-bg: color.change($base-accent, $alpha: 0.5) !default;
   $datagrid-text-stub-background-image-path: data-uri('images/widgets/generic/color-schemes/darkmoon/grid/text-stub.png') !default;
+  $datagrid-cell-removed-border-color: $datagrid-border-color !default;
+  $datagrid-row-removed-bg: $datagrid-border-color !default;
+  $datagrid-cell-removed-text-color: $datagrid-columnchooser-item-color !default;
 }
 
 @if $color == "darkviolet" {
@@ -405,6 +418,9 @@ $datagrid-icon-link-disabled-opacity: $button-disabled-icon-opacity;
   $datagrid-columnchooser-overlay-border-radius: $base-border-radius-large !default; // TODO: may be not need
   $datagrid-column-separator-bg: color.change($base-accent, $alpha: 0.5) !default;
   $datagrid-text-stub-background-image-path: data-uri('images/widgets/generic/color-schemes/darkviolet/grid/text-stub.png') !default;
+  $datagrid-cell-removed-border-color: $datagrid-border-color !default;
+  $datagrid-row-removed-bg: $datagrid-border-color !default;
+  $datagrid-cell-removed-text-color: $datagrid-columnchooser-item-color !default;
 }
 
 @if $color == "greenmist" {
@@ -445,6 +461,9 @@ $datagrid-icon-link-disabled-opacity: $button-disabled-icon-opacity;
   $datagrid-columnchooser-overlay-border-radius: $base-border-radius-large !default; // TODO: may be not need
   $datagrid-column-separator-bg: color.change($base-accent, $alpha: 0.5) !default;
   $datagrid-text-stub-background-image-path: data-uri('images/widgets/generic/color-schemes/greenmist/grid/text-stub.png') !default;
+  $datagrid-cell-removed-border-color: $datagrid-border-color !default;
+  $datagrid-row-removed-bg: $datagrid-border-color !default;
+  $datagrid-cell-removed-text-color: $datagrid-columnchooser-item-color !default;
 }
 
 @if $color == "light" {
@@ -485,6 +504,9 @@ $datagrid-icon-link-disabled-opacity: $button-disabled-icon-opacity;
   $datagrid-columnchooser-overlay-border-radius: $base-border-radius-large !default; // TODO: may be not need
   $datagrid-column-separator-bg: color.change($base-accent, $alpha: 0.5) !default;
   $datagrid-text-stub-background-image-path: data-uri('images/widgets/generic/color-schemes/light/grid/text-stub.png') !default;
+  $datagrid-cell-removed-border-color: $datagrid-border-color !default;
+  $datagrid-row-removed-bg: $datagrid-border-color !default;
+  $datagrid-cell-removed-text-color: $datagrid-columnchooser-item-color !default;
 }
 
 @if $color == "softblue" {
@@ -525,6 +547,8 @@ $datagrid-icon-link-disabled-opacity: $button-disabled-icon-opacity;
   $datagrid-columnchooser-overlay-border-radius: $base-border-radius-large !default; // TODO: may be not need
   $datagrid-column-separator-bg: color.change($base-accent, $alpha: 0.5) !default;
   $datagrid-text-stub-background-image-path: data-uri('images/widgets/generic/color-schemes/softblue/grid/text-stub.png') !default;
+  $datagrid-cell-removed-border-color: $datagrid-border-color !default;
+  $datagrid-row-removed-bg: $datagrid-border-color !default;
+  $datagrid-cell-removed-text-color: $datagrid-columnchooser-item-color !default;
 }
 
-$datagrid-cell-removed-text-color: $datagrid-columnchooser-item-color !default;
