--- a/scss/widgets/material/gridBase/_colors.scss
+++ b/scss/widgets/material/gridBase/_colors.scss
@@ -81,6 +81,7 @@ $datagrid-menu-icon-color: lighten($base-icon-color, 33.7%) !default;
 $datagrid-cell-modified-border-color: color.change($base-success, $alpha: 0.32) !default;
 $datagrid-cell-removed-border-color: $datagrid-border-color !default;
 $datagrid-row-removed-bg: $datagrid-border-color !default;
+$datagrid-cell-removed-text-color: null !default;
 
 /**
 * $name 45. Invalidate data faded color
@@ -178,6 +179,7 @@ $datagrid-icon-link-disabled-opacity: $button-disabled-icon-opacity;
   $datagrid-columnchooser-item-bg: $datagrid-columnchooser-bg !default;
   $datagrid-row-alternation-bg: darken($datagrid-base-background-color, 4%) !default;
   $datagrid-text-stub-background-image-path: data-uri('images/widgets/material/color-schemes/light/grid/text-stub.png') !default;
+  $datagrid-cell-removed-text-color: $datagrid-columnchooser-item-color !default;
 }
 
 @if $mode == "dark" {
@@ -192,6 +194,6 @@ $datagrid-icon-link-disabled-opacity: $button-disabled-icon-opacity;
   $datagrid-columnchooser-item-bg: lighten($datagrid-columnchooser-bg, 3%) !default;
   $datagrid-row-alternation-bg: lighten($datagrid-base-background-color, 4%) !default;
   $datagrid-text-stub-background-image-path: data-uri('images/widgets/material/color-schemes/dark/grid/text-stub.png') !default;
+  $datagrid-cell-removed-text-color: $datagrid-columnchooser-item-color !default;
 }
 
-$datagrid-cell-removed-text-color: $datagrid-columnchooser-item-color !default;
